Fixed icon stetch on mobile

--- a/assets/style.css
+++ b/assets/style.css
@@ -267,13 +267,9 @@ icon {
     align-items: center;
 }
 
-.iconFocus > img, .iconFocus > icon, .iconFocus > imgx {
+.iconFocus > img, .iconFocus > icon {
     width: 50%;
     fill: var(--accent);
-}
-
-.iconFocus > imgx {
-    padding-bottom: 50%;
 }
 
 .blockOptions {
@@ -877,10 +873,14 @@ icon {
         width: 80%;
     }
 
-    .iconFocus > img, .iconFocus > icon, .iconFocus > imgx {
+    .iconFocus > img, .iconFocus > icon {
         width: 100%;
         height: 50%;
         justify-content: center;
+    }
+
+    .iconFocus > img {
+        width: unset;
     }
 
     .blockOptions {
